Revert "fix(theme): switch toolbar+header band to secondary-container for visible tint"
This reverts commit 689f076ac878054cf5ebcf3ef383af93ec13110e.

--- a/projects/angular-utilities/src/table-builder/components/generic-table/generic-table.component.scss
+++ b/projects/angular-utilities/src/table-builder/components/generic-table/generic-table.component.scss
@@ -8,7 +8,7 @@
 // .header-wrapper / .flx-row-end. The Material header cells inherit the row
 // background, so we only need to set it once.
 :host::ng-deep .mat-mdc-header-row {
-  background-color: var(--mat-sys-secondary-container, #cce8e7);
+  background-color: var(--mat-sys-surface-container, #f4fafa);
 }
 
 .sticky {
@@ -29,7 +29,7 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  background-color: var(--mat-sys-secondary-container, #cce8e7);
+  background-color: var(--mat-sys-surface-container, #f4fafa);
 }
 
 :host::ng-deep mat-paginator {
